@@ -1,50 +1,0 @@
-/*
- * Copyright (C) 2008-2011 The QXmpp developers
- *
- * Author:
- *  Manjeet Dahiya
- *
- * Source:
- *  http://code.google.com/p/qxmpp
- *
- * This file is a part of QXmpp library.
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- */
-
-
-#ifndef QXMPPPACKET_H
-#define QXMPPPACKET_H
-
-#include <QByteArray>
-
-// forward declarations of QXmlStream* classes will not work on Mac, we need to
-// include the whole header.
-// See http://lists.trolltech.com/qt-interest/2008-07/thread00798-0.html
-// for an explanation.
-#include <QXmlStreamWriter>
-
-#include "QXmppGlobal.h"
-
-class QDomElement;
-
-class QXMPP_EXPORT QXmppPacket
-{
-public:
-    QXmppPacket();
-    virtual ~QXmppPacket();
-
-    virtual void parse(const QDomElement &element) = 0;
-    virtual void toXml( QXmlStreamWriter *writer ) const = 0;
-};
-
-#endif // QXMPPPACKET_H
